# offensivegraphs

./: .gitignore  404.html  LICENSE  README.md  env.example  index.html  initial_version.py  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml  ssh.py
.github/: FUNDING.yml
.github/workflows/: checks.yml  deploy-site.yml
blog/: index.html
blog/2024/10/10/first-steps-and-initial-version/: index.html
blog/2024/10/11/improving-configuration-handling-esp-for-tools/: index.html
blog/archive/2024/: index.html
blog/category/initial-journey/: index.html
blog/category/planning-and-decision-making/: index.html
docs/: index.md
docs/blog/: .authors.yml
docs/blog/posts/: 2024-10-10-first-steps-and-initial-version.md  2024-10-10-initial-version.md  2024-10-11-configuration-for-tool-calls.md  2024-10-11-create_react_agent.md  2024-10-11-plan-and-exec.md  2024-10-11-work-on-tool-calls.md  2024-10-12-create_react_agent.md  2024-10-14-plan-and-exec.md  2024-10-18-adding-a-scribe.md
docs/examples/: linux-priv-esc.md
docs/series/: initial-journey.md  planning-and-decision-making.md
examples/linux-priv-esc/: index.html
series/initial-journey/: index.html
series/planning-and-decision-making/: index.html
src/: executor_and_scribe.py  initial_version.py  pentest_task_tree.py  plan_and_execute.py  plan_and_execute_and_scribe.py  planner_and_execute_linear.py  ssh.py  switch-to-react.py  ui.py
src/graphs/: execute_with_scribe.py  initial_version.py  plan_and_execute.py  plan_and_execute_with_notes.py
src/helper/: common.py  log.py  ui.py
src/tools/: ssh.py
(+3 files in other folders)
